Replace Gatling sh and bat file by a scala application (#372)
Motivation:
- it is complicated to maintain sh and bat files
- we have a common library used by the other plugins

Modifications:
- replaced the sh and bat files by the module gatling-bundle
- implemented new 'startEnterprise' feature
- All CLI helpers message are now in the gatling-bundle module

Result:
- minimal sh and bat files to start the gatling-bundle

ref: MISC-310