@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# Copyright 2011-2017 GatlingCorp (http://gatling.io)
+# Copyright 2011-2022 GatlingCorp (http://gatling.io)
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
 # limitations under the License.
 #
 
-set -e
-
 if [ -n "$JAVA_HOME" ]; then
     JAVA="$JAVA_HOME"/bin/java
 else
@@ -28,29 +26,10 @@ BIN_DIR=$(dirname "$0")
 cd "${BIN_DIR}/.." && DEFAULT_GATLING_HOME=$(pwd) && cd "${OLDDIR}"
 
 GATLING_HOME="${GATLING_HOME:=${DEFAULT_GATLING_HOME}}"
-GATLING_CONF="${GATLING_CONF:=$GATLING_HOME/conf}"
 
-export GATLING_HOME GATLING_CONF
+JAVA_OPTS="${JAVA_OPTS} -Xms512M -Xmx512M -Xmn100M"
 
-echo "GATLING_HOME is set to ${GATLING_HOME}"
+# Setup classpath
+CLASSPATH="$GATLING_HOME/lib/*"
 
-DEFAULT_JAVA_OPTS="-server"
-DEFAULT_JAVA_OPTS="${DEFAULT_JAVA_OPTS} -Xmx1G -XX:+HeapDumpOnOutOfMemoryError"
-DEFAULT_JAVA_OPTS="${DEFAULT_JAVA_OPTS} -XX:+UseG1GC -XX:+ParallelRefProcEnabled"
-DEFAULT_JAVA_OPTS="${DEFAULT_JAVA_OPTS} -XX:MaxInlineLevel=20 -XX:MaxTrivialSize=12 -XX:-UseBiasedLocking"
-COMPILER_OPTS="-Xss100M $DEFAULT_JAVA_OPTS $JAVA_OPTS"
-
-# Setup classpaths
-COMPILER_CLASSPATH="$GATLING_HOME/lib/*:$GATLING_CONF:"
-GATLING_CLASSPATH="$GATLING_HOME/lib/*:$GATLING_HOME/user-files/resources:$GATLING_CONF:"
-
-
-# Use the extra compiler options flag only if they are provided
-if [ -n "$EXTRA_SCALAC_OPTIONS" ]; then
-    EXTRA_COMPILER_OPTIONS="-eso $EXTRA_SCALAC_OPTIONS"
-fi
-
-# Run the compiler
-"$JAVA" $COMPILER_OPTS -cp "$COMPILER_CLASSPATH" io.gatling.compiler.ZincCompiler $EXTRA_COMPILER_OPTIONS "$@" 2> /dev/null
-# Run Gatling
-"$JAVA" $DEFAULT_JAVA_OPTS $JAVA_OPTS -cp "$GATLING_CLASSPATH" io.gatling.app.Gatling "$@"
+"$JAVA" $JAVA_OPTS -cp "$CLASSPATH" io.gatling.bundle.GatlingCLI "$@"
